asm-multi-cluster-failover/httproute-weighted.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: istio-ingress
spec:
  gatewayClassName: istio
  listeners:
  - name: default
    hostname: "*.example.com"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
---
# Create a separate kubernetes service so there is a DNS record
apiVersion: "v1"
kind: "Service"
metadata:
  name: whereami-hr
  namespace: default # istio-ingress
spec:
  type: ClusterIP
  ports:
  - port: 80
---
# configure mesh using Gateway API https://istio.io/latest/docs/tasks/traffic-management/ingress/gateway-api/#mesh-traffic
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: whereami-route
spec:
  parentRefs:
  - name: shared-gateway
    namespace: istio-ingress
  hostnames:
  - "whereami.example.com"
  rules:
  # direct to app-1
  - matches:
    - path:
        type: PathPrefix
        value: /app-1
    backendRefs:
    - namespace: app-1
      name: whereami
      port: 80
  # direct to app-2
  - matches:
    - path:
        type: PathPrefix
        value: /app-2
    backendRefs:
    - namespace: app-2
      name: whereami
      port: 80
  #- filters:
  #    - type: RequestRedirect
  #      requestRedirect:
  #        hostname: example.com
  #        statusCode: 302
  - backendRefs:
    - namespace: app-1
      name: whereami
      port: 80
      weight: 100
    - namespace: app-2
      name: whereami
      port: 80
      weight: 0
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: cross-namespace-access
  namespace: app-1
spec:
  from:
  # HTTPRoute resources in default namespace
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: default
  to:
  # All services in this namespace
  - group: ""
    kind: Service
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: cross-namespace-access
  namespace: app-2
spec:
  from:
  # HTTPRoute resources in default namespace
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: default
  to:
  # All services in this namespace
  - group: ""
    kind: Service
