asm-multi-cluster-failover/localityLbSetting.yaml
# https://istio.io/latest/docs/tasks/traffic-management/locality-load-balancing/failover/
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: frontend
  namespace: frontend
spec:
  host: whereami-frontend.frontend.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        maxRequestsPerConnection: 0
    loadBalancer:
      simple: LEAST_REQUEST
      localityLbSetting:
        enabled: true
        distribute:
          - from: us-central1/*
            to:
              "us-central1/*": 100
        #failover:
        #  - from: us-central1
        #    to: us-east4
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 1s
      baseEjectionTime: 1m
